manifests/bootstrap/argocd/network-policy/egress-to-kube-apiserver.yaml
# ArgoCD ApplicationSet Controller
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-applicationset-controller-to-kubeapi-server-access
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-applicationset-controller
  egress:
    # Kubernetes API access
    - toEntities:
        - kube-apiserver

---
# ArgoCD Application Controller
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-application-controller-to-kubeapi-server-access
  namespace: argocd
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - argocd-application-controller
          - argocd-metrics
  egress:
    # Kubernetes API access
    - toEntities:
        - kube-apiserver

---
# ArgoCD Server
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-server-to-kube-apiserver-access
  namespace: argocd
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - argocd-server
          - argocd-server-metrics
  egress:
    # Kubernetes API access
    - toEntities:
        - kube-apiserver

---
# ArgoCD Dex Server
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-dex-server-to-kube-apiserver-access
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-dex-server
  egress:
    # Kubernetes API access
    - toEntities:
        - kube-apiserver
