manifests/bootstrap/argocd/network-policy/egress-to-mosaic.yaml
---
# ArgoCD Application Controller
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-application-controller-to-mosaic-face-detection-access
  namespace: argocd
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - argocd-application-controller
          - argocd-metrics
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosaic-face-detection
      toPorts:
        - ports:
            - port: "9092"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-application-controller-to-mosaic-audio-transcription-access
  namespace: argocd
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - argocd-application-controller
          - argocd-metrics
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosaic-audio-transcription
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-application-controller-to-mosaic-conversation-briefing-access
  namespace: argocd
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - argocd-application-controller
          - argocd-metrics
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosaic-conversation-briefing
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
