manifests/bootstrap/argocd/network-policy/ingress-from-grpc-webui.yaml
---
# ArgoCD Server
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-server-from-grpc-webui-access
  namespace: argocd
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - argocd-server
          - argocd-server-metrics
  ingress:
    # gRPC + webUI for argocd server
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
