manifests/bootstrap/argocd/network-policy/ingress-from-repo-server.yaml
---
# ArgoCD Redis
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-redis-from-repo-server-access
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  ingress:
    # From ArgoCD components
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-repo-server
            io.kubernetes.pod.namespace: argocd
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
